--- a/Part B/videos.html
+++ b/Part B/videos.html
@@ -21,6 +21,7 @@
 
         <nav>
             <div class="nav"><a href="videos.html">VIDEOS</a></div>
+            <div class="nav"><a href="concerts.html">CONCERTS</a></div> 
             <div class="nav"><a href="artists.html" target="_blank">ARTISTS</a> </div>
             <div class="nav"><a href="home.html">HOME</a></div> 
             
